# lightning-hydra-template

./: .copilot-commit-message-instructions.md  .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  pyproject.toml  pytest.ini  ruff.toml
.gitlab-ci.d/: pre-commit-autofix.yml
